--- a/AlejandrocomupnVereauBarboza/app/src/main/res/layout/detalles_cartas.xml
+++ b/AlejandrocomupnVereauBarboza/app/src/main/res/layout/detalles_cartas.xml
@@ -48,13 +48,13 @@
         android:id="@+id/DbtnVerMovimiento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:onClick="verMovimientos"
         android:text="Ver Movimientos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.062" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/DbtnSincro"
