--- a/AlejandrocomupnVereauBarboza/app/src/main/res/layout/registro_cuenta.xml
+++ b/AlejandrocomupnVereauBarboza/app/src/main/res/layout/registro_cuenta.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegistroCuentaActivity">
+    tools:context=".RegistroCartaActivity">
 
     <TextView
         android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registro de Cuentas"
+        android:text="Registro de Carta"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
